force-app/main/default/objects/Opportunity_Assessment__c/Opportunity_Assessment__c.object-meta.xml
<CustomObject>
    <description>Phase 1 - PWC opportunity assessment plan</description>
    <label>Opportunity Assessment</label>
    <nameField>
        <label>Opportunity Assessment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>