force-app/main/default/objects/Opportunity_Assessment__c/fields/Internal_Resources__c.field-meta.xml
<CustomField>
    <fullName>INTERNAL_Resources__c</fullName>
    <description>Phase 1 - Opportunity Assessment (PWC)

Identifying if any extra resources will be required to deliver the product/solution</description>
    <inlineHelpText>What internal resources will be required to deliver this product/ solution?</inlineHelpText>
    <label>Internal Resources</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>