force-app/main/default/objects/Opportunity_Assessment__c/fields/Marketing_Focus_Aligned__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Focus_Aligned__c</fullName>
    <description>Phase 1 - Opportunity Assessment (PWC)

Identifying if it’s a key account, market, product focus</description>
    <inlineHelpText>Is this opportunity aligned to our market focus?</inlineHelpText>
    <label>Marketing Focus Aligned</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>