force-app/main/default/objects/Opportunity_Assessment__c/recordTypes/Products_Enterprise.recordType-meta.xml
<RecordType>
    <fullName>Products_Enterprise</fullName>
    <active>true</active>
    <description>Enterprise Customer for Products Opportunity</description>
    <label>Products - Enterprise</label>
</RecordType>