force-app/main/default/objects/Opportunity_Assessment__c/recordTypes/Products_SMB.recordType-meta.xml
<RecordType>
    <fullName>Products_SMB</fullName>
    <active>true</active>
    <description>SMB Customer for Products Opportunity</description>
    <label>Products - SMB</label>
</RecordType>