force-app/main/default/objects/Opportunity_Assessment__c/recordTypes/Solutions_Enterprise.recordType-meta.xml
<RecordType>
    <fullName>Solutions_Enterprise</fullName>
    <active>true</active>
    <description>Enterprise Customer for Solutions Opportunity</description>
    <label>Solutions - Enterprise</label>
</RecordType>