force-app/main/default/objects/Opportunity_Assessment__c/recordTypes/Solutions_SMB.recordType-meta.xml
<RecordType>
    <fullName>Solutions_SMB</fullName>
    <active>true</active>
    <description>SMB Customer for Solutions Opportunity</description>
    <label>Solutions - SMB</label>
</RecordType>